--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "fstream": "^1.0.12",
         "lodash": "^4.17.15",
         "minimist": "^1.2.5",
+        "node-html-parser": "^6.1.5",
         "strip-json-comments": "^3.1.0",
         "to-markdown": "^3.1.1",
         "typescript": "^3.9.5",
